Update nav link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="grid">
 
     <header class="header">     
-        <h1><a href="https://wagandwander.vercel.app">Wag and Wander</a></h1>
+        <h1><a href="https://wag-and-wander.vercel.app/">Wag and Wander</a></h1>
         <nav>
             <ul>
                 <!-- <li><a href="#about">About</a></li> -->
